correct content overlapping navbar

--- a/index.css
+++ b/index.css
@@ -32,13 +32,6 @@ header {
     background-size: cover;
 }
 
-.content {
-    width: 94%;
-    margin: 4em auto;
-    font-size: 20px;
-    line-height: 30px;
-    text-align: justify;
-}
 
 .logo {
     line-height: 60px;
@@ -54,13 +47,14 @@ header {
 nav {
     position: fixed;
     width: 100%;
+    top: 0;
     line-height: 60px;
 }
 
 nav ul {
     line-height: 60px;
     list-style: none;
-    background: rgba(0, 0, 0, 0);
+    background-color: rgba(0, 0, 0, 0);
     overflow: hidden;
     color: #fff;
     padding: 0;
@@ -71,8 +65,8 @@ nav ul {
 } 
 
 nav.white ul {
-    background: #fff;
-    color: white;
+    background-color: #fff;
+    color: teal;
 }
 
 nav ul li {
@@ -82,8 +76,12 @@ nav ul li {
 
 nav ul li a {
     text-decoration: none;
-    color: white;
+    color: teal;
     font-size: 16px;
+}
+
+nav ul li a:hover {
+    color: rgb(127, 139, 139);
 }
 
 .menu-icon {
@@ -101,13 +99,19 @@ nav ul li a {
 #hero {
     width: 100%;
     height: 100vh;
-    padding: 0;
-    background-color: #236159;
+    background-color: teal;
 }
   
+#about {
+    width: 100%;
+    height: 100vh;
+    padding: 0;
+    background-color: rgb(182, 195, 252);
+}
 
-
-
+.row > div{
+    position: inherit;
+}
 
 @media(max-width: 786px) {
 
